# cse341personal2/routes/contacts.js
@@ -1,18 +1,0 @@
-console.log('Contacts route loaded');  // Added for debugging
-
-const express = require('express');
-const router = express.Router();
-
-const contactsController = require('../controllers/contacts');
-
-router.get('/', contactsController.getAll);
-
-router.get('/:id', contactsController.getSingle);
-
-router.post('/', contactsController.createContact);
-
-router.put('/:id', contactsController.updateContact);
-
-router.delete('/:id', contactsController.deleteContact);
-
-module.exports = router;
