# cse341portfolio/swagger.json
@@ -1,17 +1,17 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "My Contacts API",
+    "title": "My Output API",
     "description": "Description",
     "version": "1.0.0"
   },
-  "host": "localhost:3000",
+  "host": "localhost:8080",
   "basePath": "/",
   "schemes": [
     "http"
   ],
   "paths": {
-    "/contacts/": {
+    "/artworks/": {
       "get": {
         "description": "",
         "produces": [
@@ -20,9 +20,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       },
@@ -35,19 +32,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "img": {
                   "example": "any"
                 },
-                "lastName": {
+                "title": {
                   "example": "any"
                 },
-                "email": {
+                "price": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "description": {
                   "example": "any"
                 },
-                "birthday": {
+                "date": {
                   "example": "any"
                 }
               }
@@ -64,7 +61,7 @@
         }
       }
     },
-    "/contacts/{id}": {
+    "/{id}": {
       "get": {
         "description": "",
         "produces": [
@@ -81,9 +78,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       },
@@ -102,19 +96,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "img": {
                   "example": "any"
                 },
-                "lastName": {
+                "title": {
                   "example": "any"
                 },
-                "email": {
+                "price": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "description": {
                   "example": "any"
                 },
-                "birthday": {
+                "date": {
                   "example": "any"
                 }
               }
